Fix identity spacing

--- a/src/Fields/identity.scss
+++ b/src/Fields/identity.scss
@@ -1,5 +1,5 @@
 .identity-popover {
-  padding: 8px;
+  padding: 0 16px;
 }
 
 .bolt-identity-picker {
